[package]
authors = ["nokaa <nokaa@cock.li>"]
name = "httbloat"
version = "0.1.0"

[dependencies]
chrono = "0.2.25"
futures = "0.1"
httparse = "1.1.2"
log = "0.3.6"
matches = "0.1.4"
tokio-core = "0.1"

[dependencies.tokio-proto]
git = "https://github.com/tokio-rs/tokio-proto"

[dependencies.tokio-service]
git = "https://github.com/tokio-rs/tokio-service"

[dev-dependencies]
env_logger = "0.3"
